# bielik-hallucination-detection

./: .gitignore  Justfile  LICENSE  README.md  app.py  pyproject.toml  requirements-spaces.txt  run_extended.py  run_mvp.py
docs/: domain-dataset-validation.md  risk-tool.md
results/Bielik-1.5B-v3.0-Instruct/: risk_probe.npz
results/Bielik-11B-v3.0-Instruct/: risk_probe.npz
results/Bielik-4.5B-v3.0-Instruct/: risk_probe.npz
results/Bielik-Minitron-7B-v3.0-Instruct/: risk_probe.npz
scripts/: hallucination_risk.py  run_domains.py  train_risk_probe.py
spaces/: README-space.md
src/bielik_hallu/: config.py
src/bielik_hallu/analysis/: auroc.py  contrasts.py  plots.py  probe.py  report.py
src/bielik_hallu/dataset/: build.py  candidates.py  candidates_domains.py  label.py  tokenization.py
src/bielik_hallu/extract/: extended.py  model.py  positions.py  run.py
src/bielik_hallu/metrics/: baseline.py  dispersion.py
src/bielik_hallu/risk/: inference.py  probe.py
tests/: test_app.py  test_auroc.py  test_baseline.py  test_build_parse.py  test_build_retry.py  test_candidates_domains.py  test_config.py  test_contrasts.py  test_dispersion.py  test_extended.py  test_extract_run.py  test_label.py  test_model_hooks.py  test_positions.py  test_probe.py  test_report.py  test_risk_tool.py  test_run_domains.py  test_tokenization.py
