[project]
name = "bielik-hallu"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.44",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17",
    "matplotlib>=3.9",
    "anthropic>=0.34",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Web demo (Gradio) for local runs + Hugging Face Spaces. Kept OUT of core deps
# so the research pipeline stays lean; install with: uv sync --extra demo
demo = ["gradio>=4.44", "huggingface_hub>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bielik_hallu"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
